codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__model_selection_popup.snap
---
source: tui/src/chatwidget/tests.rs
expression: popup
---
  Select Model and Effort
  Access legacy models by running codex -m <provider>/<model> or in your confi

› 1. openai/gpt-5.1-codex-max (default)  Latest Codex-optimized flagship for
                                         deep and fast reasoning.
  2. openai/gpt-5.1-codex                Optimized for codex.
  3. openai/gpt-5.1-codex-mini           Optimized for codex. Cheaper, faster,
                                         but less capable.
  4. openai/gpt-5.2                      Latest frontier model with
                                         improvements across knowledge,
                                         reasoning and coding
  5. openai/gpt-5.1                      Broad world knowledge with strong
                                         general reasoning.

  Press enter to select reasoning effort, or esc to dismiss.
