codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__replay_tool_interaction_snapshot.snap
---
source: tui/src/chatwidget/tests.rs
expression: text_blob
---
╭────────────────────────────────────────────────────────╮
│ >_ Codex (v0.0.0)                                      │
│                                                        │
│ model:     test-provider/test-model   /model to change │
│ directory: ~/projects/ribelo/codex/codex-rs/tui        │
╰────────────────────────────────────────────────────────╯

  To get started, describe a task or try one of these commands:

  /init - create an AGENTS.md file with instructions for Codex
  /status - show current session configuration
  /approvals - choose what Codex can do without approval
  /model - choose what model and reasoning effort to use
  /review - review any changes and find issues


↳ read_file {"path": "src/lib.rs"}
  └ fn main() {}
