codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__replayed_review_tool_output_history.snap
---
source: tui/src/chatwidget/tests.rs
assertion_line: 1704
expression: rendered
---
• Called review(current changes)
  └ {"overall_explanation":"ignored"}
