codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__review_queues_user_messages_snapshot.snap
---
source: tui/src/chatwidget/tests.rs
assertion_line: 9935
expression: term.backend().vt100().screen().contents()
---










• Working (0s • esc to interrupt)

• Queued follow-up messages
  ↳ Queued while /review is running.
    ⌥ + ↑ edit last queued message

› Ask Codex to do anything

  • openai • gpt-5.3-codex • default                                 100% left
